# rust-scratch

./: .gitignore  Cargo.toml  data.parquet  data1.parquet  schema.txt
arrow-parquet/: Cargo.toml
arrow-parquet/data/: data.parquet  input1.json  input2.json
arrow-parquet/src/: main.rs
datafusion-object/: Cargo.toml
datafusion-object/src/: main.rs
datafusion-parquet/: Cargo.toml
datafusion-parquet/data/: data.parquet
datafusion-parquet/src/: main.rs
datafusion-s3/: Cargo.toml
datafusion-s3/src/: main.rs
flatten-json/: Cargo.toml
flatten-json/src/: main.rs
lazy/: Cargo.toml
lazy/src/: main.rs
pipe/: Cargo.toml
pipe/src/: main.rs
schema-validate/: Cargo.toml
schema-validate/data/: input2.json  schema.txt
schema-validate/src/: main.rs
src/: main.rs
