[package]
name = "flatten-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-flatten-json = "0.1.0"
serde_json = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
error-chain = "0.12.4"
log = "0.4.14"
json = "0.12.4"